# api-gateway/api/docs/swagger.json
@@ -1,8 +1,8 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is a first version of HilolTest APIs",
-        "title": "HilolTest API",
+        "description": "This is a first version of Test CRUD APIs",
+        "title": "Test CRUD API",
         "contact": {
             "name": "Bektosh Madaminov",
             "email": "madaminovsbektosh@gmail.com"
@@ -10,7 +10,7 @@
         "version": "1.0"
     },
     "paths": {
-        "/posts": {
+        "/api/posts": {
             "get": {
                 "description": "API for fetching a list of posts",
                 "produces": [
@@ -20,6 +20,22 @@
                     "posts"
                 ],
                 "summary": "get list of posts",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "page",
+                        "name": "page",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "limit",
+                        "name": "limit",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -44,36 +60,17 @@
                     "posts"
                 ],
                 "summary": "update post info",
-                "responses": {
-                    "200": {
-                        "description": "OK",
+                "parameters": [
+                    {
+                        "description": "post",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
                         "schema": {
-                            "$ref": "#/definitions/ports.ResponseMessage"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/httperr.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/httperr.ErrorResponse"
+                            "$ref": "#/definitions/ports.UpdatePostRequest"
                         }
                     }
-                }
-            },
-            "delete": {
-                "description": "API for deleting a post",
-                "produces": [
-                    "application/json"
                 ],
-                "tags": [
-                    "posts"
-                ],
-                "summary": "delete a post",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -96,7 +93,7 @@
                 }
             }
         },
-        "/posts/download": {
+        "/api/posts/download": {
             "post": {
                 "description": "API for starting the download of posts",
                 "produces": [
@@ -122,7 +119,7 @@
                 }
             }
         },
-        "/posts/download/status": {
+        "/api/posts/download/status": {
             "get": {
                 "description": "API for checking the status of posts download",
                 "produces": [
@@ -148,7 +145,7 @@
                 }
             }
         },
-        "/posts/{post-id}": {
+        "/api/posts/{post-id}": {
             "get": {
                 "description": "API for fetching an individual post",
                 "produces": [
@@ -158,11 +155,59 @@
                     "posts"
                 ],
                 "summary": "get individual post",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "post-id",
+                        "name": "post-id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/ports.Post"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/httperr.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/httperr.ErrorResponse"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "API for deleting a post",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "posts"
+                ],
+                "summary": "delete a post",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "post-id",
+                        "name": "post-id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/ports.ResponseMessage"
                         }
                     },
                     "404": {
@@ -225,6 +270,20 @@
             "type": "object",
             "properties": {
                 "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "ports.UpdatePostRequest": {
+            "type": "object",
+            "properties": {
+                "body": {
+                    "type": "string"
+                },
+                "post_id": {
+                    "type": "integer"
+                },
+                "title": {
                     "type": "string"
                 }
             }
